--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -73,7 +73,7 @@ jobs:
     if: | 
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-    name: Publish to GitHub Packages
+    name: Publish to github npm registry
     needs: [test-runner]
     uses: ./.github/workflows/publish-npm.yml
     with:
@@ -88,7 +88,7 @@ jobs:
     if: |
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-    name: Publish to GitHub Packages
+    name: Publish to npmjs registry
     needs: [test-runner]
     uses: ./.github/workflows/publish-npm.yml
     with:
