--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.4.5",
     "globals": "^15.11.0",
     "graphql": "^16.9.0",
+    "isomorphic-git": "^1.27.1",
     "mock-fs": "^5.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
