--- a/deploy/docker/compose.server.secure.yml
+++ b/deploy/docker/compose.server.secure.yml
@@ -25,7 +25,7 @@ services:
       - users
 
   client:
-    image: intocps/dtaas-web:latest
+    image: intocps/dtaas-web:0.6.1
     restart: unless-stopped
     volumes:
       - "${DTAAS_DIR}/deploy/config/client/env.js:/dtaas/client/build/env.js"
@@ -39,7 +39,7 @@ services:
       - frontend
 
   libms:
-    image: intocps/libms:latest
+    image: intocps/libms:0.4.7
     restart: unless-stopped
     volumes:
       - ${DTAAS_DIR}/files:/dtaas/libms/files
