--- a/deploy/docker/compose.local.secure.yml
+++ b/deploy/docker/compose.local.secure.yml
@@ -25,7 +25,7 @@ services:
       - users
 
   client:
-    image: intocps/dtaas-web:latest
+    image: intocps/dtaas-web:0.6.1
     restart: unless-stopped
     volumes:
       - "${DTAAS_DIR}/deploy/config/client/env.local.js:/dtaas/client/build/env.js"
