--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@into-cps-association/libms",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
@@ -50,6 +50,7 @@
     "globals": "^15.11.0",
     "graphql": "^16.9.0",
     "isomorphic-git": "^1.27.1",
+    "js-yaml": "^4.1.0",
     "mock-fs": "^5.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -83,6 +84,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/js-yaml": "^4.0.9"
   }
 }
