--- a/client/package.json
+++ b/client/package.json
@@ -93,7 +93,8 @@
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "7.25.8",
