--- a/deploy/services/gitlab/.env
+++ b/deploy/services/gitlab/.env
@@ -1,2 +1,2 @@
-GITLAB_HOME='/Users/<Username>/DTaaS/deploy/services/gitlab'
-SERVER_DNS='foo.com'
+DTAAS_DIR='/Users/<username>/DTaaS'
+SERVER_DNS='localhost'
