--- a/deploy/services/gitlab/runner-config.toml
+++ b/deploy/services/gitlab/runner-config.toml
@@ -9,5 +9,5 @@
     privileged = false
     disable_entrypoint_overwrite = false
     oom_kill_disable = false
-    disable_cache = false
     volumes = ["/cache"]
+    network_mode = "host"
