Adds Digital Twin create and Library features (#1081)
- Refactors the classes interacting with gitlab so that
  the exploration of existing digital assets in a gitlab
  repository are possible
- Adds library page which allows to browse existing
  assets in a gitlab repository and select them to
  create new digital twin
- Adds feature to create digital twins from clean slate
- Adds ability to create composite, fleet and
  hierarchical digital twins

---------
Co-authored-by: vanessa <vanessascherma@gmail.com>

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@into-cps-association/dtaas-web",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Web client for Digital Twin as a Service (DTaaS)",
   "main": "index.tsx",
   "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
@@ -56,6 +56,7 @@
     "@mui/material": "^6.1.1",
     "@mui/x-tree-view": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
@@ -70,6 +71,7 @@
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
+    "jest-fetch-mock": "^3.0.3",
     "katex": "^0.16.11",
     "markdown-it-katex": "^2.0.3",
     "oidc-client-ts": "^3.0.1",
@@ -87,6 +89,7 @@
     "redux": "^5.0.1",
     "remarkable": "^2.0.1",
     "remarkable-katex": "^1.2.1",
+    "reselect": "^5.1.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
