--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -90,7 +90,7 @@ services:
     image: thomseddon/traefik-forward-auth:latest
     restart: unless-stopped
     volumes:
-      - ${OAUTH_CONF_FILEPATH}:/conf
+      - ${DTAAS_DIR}/docker/conf.dev:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
       - PROVIDERS_GENERIC_OAUTH_AUTH_URL=${OAUTH_URL}/oauth/authorize
