--- a/servers/lib/compose.lib.dev.yml
+++ b/servers/lib/compose.lib.dev.yml
@@ -5,5 +5,6 @@ services:
       dockerfile: ./docker/libms.dockerfile
     volumes:
       - ${LOCAL_PATH}:/dtaas/libms/files
+      - ./config/libms.dev.yaml:/dtaas/libms/config/libms.yaml
     ports:
       - ${PORT}:4001
