Fixes mistakes in the docker compose files

--- a/servers/lib/compose.lib.dev.yml
+++ b/servers/lib/compose.lib.dev.yml
@@ -4,7 +4,7 @@ services:
       context: ../../
       dockerfile: ./docker/libms.dockerfile
     volumes:
-      - ${LOCAL_PATH}:/dtaas/libms/files
-      - ./config/libms.dev.yaml:/dtaas/libms/config/libms.yaml
+      - ./files:/dtaas/libms/files
+      - ./config/libms.dev.yaml:/dtaas/libms/libms.yaml
     ports:
-      - ${PORT}:4001
+      - 4001:4001
