--- a/deploy/config/libms.yaml
+++ b/deploy/config/libms.yaml
@@ -1,14 +1,14 @@
 port: '4001'
 mode: 'local'    #git or local
-local-path: '..\..\files'
+local-path: '/dtaas/libms/files'
 log-level: 'debug'
 apollo-path: '/lib'
 graphql-playground: 'true'
 
 git-repos:   #only used in git mode
-  - user1: 
+  - user1:
       repo-url: 'https://gitlab.com/dtaas/user1.git'
-  - user2: 
+  - user2:
       repo-url: 'https://gitlab.com/dtaas/user2.git'
-  - common: 
+  - common:
       repo-url: 'https://gitlab.com/dtaas/common.git'
