--- a/client/package.json
+++ b/client/package.json
@@ -1,137 +1,140 @@
 {
-  "name": "@into-cps-association/dtaas-web",
-  "version": "0.8.0",
-  "description": "Web client for Digital Twin as a Service (DTaaS)",
-  "main": "index.tsx",
-  "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
-  "contributors": [
-    "Omar Suleiman",
-    "Asger Busk Breinholm",
-    "Mathias Brændgaard",
-    "Emre Temel",
-    "Cesar Vela",
-    "Vanessa Scherma"
-  ],
-  "license": "SEE LICENSE IN <LICENSE.md>",
-  "private": false,
-  "type": "module",
-  "scripts": {
-    "build": "npx react-scripts build",
-    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/ test-results/  test.svg src.svg src/util/gitlab.json",
-    "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
-    "config:local": "npx shx cp config/local.js public/env.js && npx shx cp config/local.js build/env.js",
-    "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
-    "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
-    "develop": "npx react-scripts start",
-    "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
-    "start": "serve -s build -l 4000",
-    "stop": "npx kill-port 4000",
-    "syntax": "npx eslint . --fix",
-    "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
-    "test:e2e:ext": "cross-env ext=true yarn test:e2e",
-    "test:e2e": "yarn config:test && playwright test -c ./playwright.config.ts",
-    "test:coverage:int-unit": "npx istanbul-combine -d coverage/all -r lcov -r json -r text coverage/unit/coverage-final.json coverage/int/coverage-final.json coverage/preview/unit/coverage-final.json coverage/preview/int/coverage-final.json",
-    "test:int": "jest -c ./jest.config.json jest --coverage --coverageDirectory=coverage/int ../test/integration --setupFilesAfterEnv ./test/integration/jest.setup.ts",
-    "test:unit": "jest -c ./jest.config.json --coverageDirectory=coverage/unit ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts",
-    "test:preview:int": "jest -c ./jest.config.json --coverageDirectory=coverage/preview/int ../test/preview/integration --setupFilesAfterEnv ./test/preview/integration/jest.setup.ts",
-    "test:preview:unit": "jest -c ./jest.config.json --coverageDirectory=coverage/preview/unit ../test/preview/unit --setupFilesAfterEnv ./test/preview/unit/jest.setup.ts"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "prettier": {
-    "singleQuote": true
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@eslint/migrate-config": "^1.3.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@gitbeaker/rest": "^40.1.2",
-    "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@mui/x-tree-view": "^7.19.0",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/remarkable": "^2.0.8",
-    "@types/styled-components": "^5.1.32",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.1.4",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "jest-fetch-mock": "^3.0.3",
-    "katex": "^0.16.11",
-    "markdown-it-katex": "^2.0.3",
-    "oidc-client-ts": "^3.0.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-iframe": "^1.8.5",
-    "react-is": "^18.2.0",
-    "react-oidc-context": "^3.1.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-tabs": "^6.0.2",
-    "redux": "^5.0.1",
-    "remarkable": "^2.0.1",
-    "remarkable-katex": "^1.2.1",
-    "reselect": "^5.1.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "serve": "^14.2.1",
-    "styled-components": "^6.1.1",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@babel/core": "7.25.8",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-syntax-flow": "7.25.7",
-    "@babel/plugin-transform-react-jsx": "7.25.7",
-    "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.12.0",
-    "@playwright/test": "1.48.1",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.6.1",
-    "@testing-library/react": "16.0.1",
-    "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.13",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "eslint-config-react-app": "^7.0.1",
-    "globals": "15.11.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "monocart-coverage-reports": "2.11.1",
-    "playwright": "1.48.1",
-    "prettier": "3.3.3",
-    "shx": "0.3.4",
-    "ts-jest": "29.2.5"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "@into-cps-association/dtaas-web",
+    "version": "0.8.1",
+    "description": "Web client for Digital Twin as a Service (DTaaS)",
+    "main": "index.tsx",
+    "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
+    "contributors": [
+        "Omar Suleiman",
+        "Asger Busk Breinholm",
+        "Mathias Brændgaard",
+        "Emre Temel",
+        "Cesar Vela",
+        "Vanessa Scherma"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "license": "SEE LICENSE IN <LICENSE.md>",
+    "private": false,
+    "type": "module",
+    "scripts": {
+        "analyze": "source-map-explorer 'build/static/js/*.js'",
+        "build": "npx react-scripts build",
+        "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/ test-results/  test.svg src.svg src/util/gitlab.json",
+        "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
+        "config:local": "npx shx cp config/local.js public/env.js && npx shx cp config/local.js build/env.js",
+        "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
+        "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
+        "develop": "npx react-scripts start",
+        "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
+        "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
+        "start": "serve -s build -l 4000",
+        "stop": "npx kill-port 4000",
+        "syntax": "npx eslint . --fix",
+        "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
+        "test:e2e:ext": "cross-env ext=true yarn test:e2e",
+        "test:e2e": "yarn config:test && playwright test -c ./playwright.config.ts",
+        "test:coverage:int-unit": "npx istanbul-combine -d coverage/all -r lcov -r json -r text coverage/unit/coverage-final.json coverage/int/coverage-final.json coverage/preview/unit/coverage-final.json coverage/preview/int/coverage-final.json",
+        "test:int": "jest -c ./jest.config.json jest --coverage --coverageDirectory=coverage/int ../test/integration --setupFilesAfterEnv ./test/integration/jest.setup.ts",
+        "test:unit": "jest -c ./jest.config.json --coverageDirectory=coverage/unit ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts",
+        "test:preview:int": "jest -c ./jest.config.json --coverageDirectory=coverage/preview/int ../test/preview/integration --setupFilesAfterEnv ./test/preview/integration/jest.setup.ts",
+        "test:preview:unit": "jest -c ./jest.config.json --coverageDirectory=coverage/preview/unit ../test/preview/unit --setupFilesAfterEnv ./test/preview/unit/jest.setup.ts"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app"
+        ]
+    },
+    "prettier": {
+        "singleQuote": true
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@eslint/migrate-config": "^1.3.0",
+        "@fontsource/roboto": "^5.0.8",
+        "@gitbeaker/rest": "^40.1.2",
+        "@monaco-editor/react": "^4.6.0",
+        "@mui/icons-material": "^6.1.1",
+        "@mui/material": "^6.1.1",
+        "@mui/x-tree-view": "^7.19.0",
+        "@reduxjs/toolkit": "^2.2.7",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@types/react-syntax-highlighter": "^15.5.13",
+        "@types/remarkable": "^2.0.8",
+        "@types/styled-components": "^5.1.32",
+        "@typescript-eslint/eslint-plugin": "^8.7.0",
+        "@typescript-eslint/parser": "^8.7.0",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.1.4",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-jest": "^28.8.3",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "jest-fetch-mock": "^3.0.3",
+        "katex": "^0.16.11",
+        "markdown-it-katex": "^2.0.3",
+        "oidc-client-ts": "^3.0.1",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-iframe": "^1.8.5",
+        "react-is": "^18.2.0",
+        "react-oidc-context": "^3.1.1",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.20.0",
+        "react-scripts": "^5.0.1",
+        "react-syntax-highlighter": "^15.5.0",
+        "react-tabs": "^6.0.2",
+        "redux": "^5.0.1",
+        "remarkable": "^2.0.1",
+        "remarkable-katex": "^1.2.1",
+        "reselect": "^5.1.1",
+        "resize-observer-polyfill": "^1.5.1",
+        "serve": "^14.2.1",
+        "styled-components": "^6.1.1",
+        "typescript": "5.1.6",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@babel/core": "7.25.8",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@babel/plugin-syntax-flow": "7.25.7",
+        "@babel/plugin-transform-react-jsx": "7.25.7",
+        "@eslint/eslintrc": "3.1.0",
+        "@eslint/js": "9.12.0",
+        "@playwright/test": "1.48.1",
+        "@testing-library/dom": "10.4.0",
+        "@testing-library/jest-dom": "6.6.1",
+        "@testing-library/react": "16.0.1",
+        "@testing-library/user-event": "14.5.2",
+        "@types/jest": "29.5.13",
+        "@types/node": "^22.7.5",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.1",
+        "eslint-config-react-app": "^7.0.1",
+        "globals": "15.11.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "29.7.0",
+        "jest-watch-typeahead": "^2.2.2",
+        "monocart-coverage-reports": "2.11.1",
+        "playwright": "1.48.1",
+        "prettier": "3.3.3",
+        "shx": "0.3.4",
+        "ts-jest": "29.2.5"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
